# rust-nearly-eq

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/nearly_eq/: trait.NearlyEq.js
nearly_eq/: NearlyEq.t.html  assert_nearly_eq.m.html  debug_assert_nearly_eq.m.html  index.html  macro.assert_nearly_eq.html  macro.debug_assert_nearly_eq.html  sidebar-items.js  trait.NearlyEq.html
src/: assert.rs  complex.rs  complex_impl.rs  fpa_impl.rs  lib.rs  ndarray_impl.rs  rational_impl.rs
src/nearly_eq/: assert.rs.html  complex_impl.rs.html  fpa_impl.rs.html  lib.rs.html  ndarray_impl.rs.html  rational_impl.rs.html
tests/: lib.rs
