[package]
name = "nearly_eq"
version = "0.2.3"
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
repository = "https://github.com/chalharu/rust-nearly-eq"
keywords = ["assert", "array"]
license = "MPL-2.0"
readme = "README.md"
description = "Nearly(Approximately) equal traits and assertion"
documentation = "https://docs.rs/nearly_eq/"

[lib]
name = "nearly_eq"
bench = false
test = true

[dependencies.num-complex]
optional = true
version = ">=0.0.0"

[dependencies.num-rational]
optional = true
version = ">=0.0.0"

[dependencies.num-integer]
optional = true
version = ">=0.0.0"

[dependencies.num-traits]
optional = true
version = ">=0.0.0"

[dependencies.ndarray]
optional = true
version = ">=0.0.0"

[features]
docs = ["complex", "rational", "ndarray", "i128"]
i128 = []
rational = ["num-rational", "num-integer", "num-traits"]
complex = ["num-complex"]

[badges]
travis-ci = { repository = "chalharu/rust-nearly-eq" }

[package.metadata.docs.rs]
features = ["docs"]
