[package]
authors = ["Mitsuharu Seki <mitsu1986@gmail.com>"]
description = "Nearly(Approximately) equal traits and assertion"
documentation = "https://docs.rs/nearly_eq/"
keywords = [
    "assert",
    "array",
]
license = "MPL-2.0"
name = "nearly_eq"
readme = "README.md"
repository = "https://github.com/chalharu/rust-nearly-eq"
version = "0.2.3"

[metadata.docs.rs]
features = ["docs"]

[badges.travis-ci]
repository = "chalharu/rust-nearly-eq"

[dependencies.typenum]
optional = true
version = ">=1.10.0"

[dependencies.fpa]
optional = true
version = ">=0.1.0"

[dependencies.ndarray]
optional = true
version = ">=0.0.0"

[dependencies.num-complex]
optional = true
version = ">=0.0.0"

[dependencies.num-integer]
optional = true
version = ">=0.0.0"

[dependencies.num-rational]
optional = true
version = ">=0.0.0"

[dependencies.num-traits]
optional = true
version = ">=0.0.0"

[features]
complex = ["num-complex"]
docs = [
    "complex",
    "rational",
    "ndarray",
    "i128",
]
i128 = []
rational = [
    "num-rational",
    "num-integer",
    "num-traits",
]
fixed-point = ["fpa", "typenum", "num-traits"]

[lib]
bench = false
name = "nearly_eq"
test = true
